--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             
             <div class="facecontainer">
-                <img src="img/blue.svg" alt="" class="blue"><div class="circleblack"><div class="facebg"><div class="face"><img src="img/green.svg" alt="" class="green"></div></div></div><img src="/img/pink.svg" alt="" class="pink">
+                <img src="img/blue.svg" alt="" class="blue"><div class="circleblack"><div class="facebg"><div class="face"><img src="img/green.svg" alt="" class="green"></div></div></div><img src="img/pink.svg" alt="" class="pink">
             </div>
 
             
