--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="about">About</div> <div class="contact">Contact Us</div>
             <div class="signupbg"><div class="signup">Sign Up</div></div>
             <div class="break"></div>
-            <img class="yellow" src="/img/yellow.svg" alt="yellow">
+            <img class="yellow" src="img/yellow.svg" alt="yellow">
             <div class="break"></div>
             <div class="frase">
                 <div class="hey">HEY,</div>
