--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="break"></div>
             <div class="frase">
                 <div class="hey">HEY,</div>
-                <div class="welcome">WELCOME</div>
+                <div class="hola">WELCOME</div>
                 <div class="to">TO<div class="joes">JOE'S</div></div>
                 <div class="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </div>
                 <div class="buttons"><div class="getstartedbutton"><div class="getstarted">Get Started</div></div><div class="exploremorebutton"><div class="exploremore">Explore More</div></div></div>
